fix: working with Java8