@@ -3,8 +3,9 @@ package dbridge;
 import dbridge.analysis.jdbc.FuncStackAnalyzer;
 import dbridge.analysis.jdbc.JdbcDriver;
 import dbridge.rewrite.BodyRewriter;
-import dbridge.rewrite.JavaWriter;
+import dbridge.rewrite.SootDava;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -12,16 +13,16 @@ import java.nio.file.Paths;
  * Command-line entry point for DBridge.
  *
  * Usage:
- *   java dbridge.Main &lt;classpath&gt; &lt;className&gt; &lt;methodSubsignature&gt; &lt;outputFile&gt;
+ *   java dbridge.Main &lt;classpath&gt; &lt;className&gt; &lt;methodSubsignature&gt; &lt;outputFile&gt; [sourceFile]
  *
  * Example:
- *   java dbridge.Main target/classes dbridge.test.Example1 "int getTotalPartCount(int)" out/Example1.jimple
+ *   java dbridge.Main target/classes dbridge.test.Example1 "int getTotalPartCount(int)" out/Example1.java
  */
 public class Main {
 
     public static void main(String[] args) throws Exception {
-        if (args.length != 4) {
-            System.err.println("Usage: java dbridge.Main <classpath> <className> <methodSubsignature> <outputFile>");
+        if (args.length != 4 && args.length != 5) {
+            System.err.println("Usage: java dbridge.Main <classpath> <className> <methodSubsignature> <outputFile> [sourceFile]");
             System.exit(1);
         }
         String classPath = args[0];
@@ -41,8 +42,10 @@ public class Main {
         BodyRewriter rewriter = new BodyRewriter(fsa.getBody(), fsa.getLoopsSwallowed());
         rewriter.rewriteBody();
 
-        String java = JavaWriter.toJava(fsa.getBody());
-        Files.writeString(Paths.get(outputFile), java);
+        String java = args.length == 5
+                ? SootDava.emit(new String(Files.readAllBytes(Paths.get(args[4])), StandardCharsets.UTF_8), fsa.getBody())
+                : dbridge.rewrite.JavaWriter.toJava(fsa.getBody());
+        Files.write(Paths.get(outputFile), java.getBytes(StandardCharsets.UTF_8));
         System.out.println("Transformed Java written to " + outputFile);
         System.out.println(java);
     }
